Prevent player mobile buttons flickering

--- a/client/src/sass/player/mobile.scss
+++ b/client/src/sass/player/mobile.scss
@@ -161,7 +161,7 @@
   }
 }
 
-.vjs-has-started {
+.vjs-can-play.vjs-has-started {
 
   &.vjs-user-active,
   &.vjs-paused {
